<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="cs310.fidgetspinners.grubmate.ui.ProfileFragment"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Name"
                android:id="@+id/profile_name"/>

            <RatingBar
                android:id="@+id/profileRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/ratingBarStyleIndicator"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:isIndicator="true"
                android:visibility="visible"
                android:theme="@style/RatingBar"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Report User"
                android:textAlignment="center"
                android:textColor="#ff0000"
                android:textSize="14dp"
                android:textStyle="bold"
                android:id="@+id/report_user_button"
                android:background="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="PHONE"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14dp"
                android:textStyle="bold"
                android:id="@+id/changenumber"
                android:background="@color/black"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Post History"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:id="@+id/toggleposts"
            android:padding="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Reviews"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:id="@+id/toggleReviews"
            android:padding="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <ListView
        android:id="@+id/profile_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_weight="1">
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="0dip"
        android:background="@color/black"
        android:textColor="@color/colorPrimary"
        android:text="View All Messages"
        android:id="@+id/profile_viewMessages"
        />


</LinearLayout>
