...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/feedView">
    </ListView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/map_button"
...
