<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/side_margin"
    android:layout_marginLeft="@dimen/side_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    android:layout_marginBottom="@dimen/vertical_margin"
    android:orientation="vertical"
    tools:context="cs310.fidgetspinners.grubmate.ui.SubscriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Active Subscriptions"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"/>

        <ListView
            android:id="@+id/list_subscriptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startDate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="Select Start Date"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startTime_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="Select Start Time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/endDate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="Select End Date"/>

            <Button
                android:id="@+id/endTime_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="Select End Time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Subscription Tags"
                android:maxLines="1" />

            <Button
                android:id="@+id/add_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="Add" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
